# glue-jupyter-plugin-template

./: README.md  setup.cfg
myplugin/: __init__.py  layer_artist.py  state.py  viewer.py  widgets.py
