[metadata]
name = myplugin
url = https://www.glueviz.org
author = 
author_email = 
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: BSD License
description = A template for a plugin
version = 0.1

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    glueviz
    glue-jupyter
    
[options.entry_points]
glue.plugins =
    myplugin = myplugin:setup

[options.extras_require]
test =
    pytest

[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot, *.bgz, *.tbi
